tests for hive_fork_menager examples

--- a/Dockerfile.postgres13
+++ b/Dockerfile.postgres13
@@ -20,8 +20,15 @@ RUN \
             libboost-all-dev \
             postgresql-server-dev-all \
             git \
+            python3-pip \
     && \
         apt-get clean
+
+RUN \
+    python3 -mpip install \
+        pexpect \
+        psycopg2 \
+        sqlalchemy
 
 
 
