--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -28,6 +28,21 @@ MACRO( ADD_AUTHORIZATION_FUNCTIONAL_TESTS sql_test_path)
     MESSAGE( STATUS "Added functional authorization tests '${test_target}'" )
 ENDMACRO()
 
+MACRO( ADD_EXAMPLES_FUNCTIONAL_TESTS example_test_path)
+    STRING( REGEX MATCH "^(([^\\/]*)\\/)?(.*)\\.[^.]*$" dummy ${example_test_path} ) # remove py extension
+    SET( test_name ${CMAKE_MATCH_3})
+    IF( CMAKE_MATCH_2 )
+        SET( test_name ${CMAKE_MATCH_2}.${test_name} )
+    ENDIF()
+    SET( test_target test.functional.hive_fork_manager.${test_name} )
+    SET( sources_under_tests_path ${CMAKE_SOURCE_DIR}/src/hive_fork_manager/doc/examples )
+    ADD_TEST( NAME ${test_target}
+            COMMAND test_examples.sh ${sources_under_tests_path} ${example_test_path}
+            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+            )
+    MESSAGE( STATUS "Added functional authorization tests '${test_target}'" )
+ENDMACRO()
+
 ADD_SQL_FUNCTIONAL_TESTS( context_rewind/schema_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_test.sql )
@@ -159,3 +174,6 @@ ADD_AUTHORIZATION_FUNCTIONAL_TESTS( authorization/alice_access_events_infrustruc
 ADD_AUTHORIZATION_FUNCTIONAL_TESTS( authorization/hived_access_alice_context_data.sql )
 ADD_AUTHORIZATION_FUNCTIONAL_TESTS( authorization/api_protection.sql )
 ADD_AUTHORIZATION_FUNCTIONAL_TESTS( authorization/massive_sync_live_blocks_and_fork.sql )
+
+ADD_EXAMPLES_FUNCTIONAL_TESTS( examples/forking_application.py )
+ADD_EXAMPLES_FUNCTIONAL_TESTS( examples/non_forking_application.py )
