--- a/hivemind/tavern/bridge_api_negative/list_subscribers/hive-171488_camilla_not_subscribe.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/list_subscribers/hive-171488_camilla_not_subscribe.tavern.yaml
@@ -23,3 +23,5 @@
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
+          extra_kwargs:
+            error_response: true
