--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -166,6 +166,14 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_existed_table.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_registered_table_negative.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_get_irreversible_block_forking.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_get_irreversible_block_non_forking.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_nonforking_detach_context_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_non_forking_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_non_forking_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_non_forking_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_detach_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork.sql )
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork_non_forking_app.sql )
