--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -141,6 +141,8 @@ ADD_SQL_FUNCTIONAL_TESTS( hived_api/end_massive_sync_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_cleaning_events_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_remove_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_remove_negative_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_nonforking_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_test.sql )
@@ -166,6 +168,7 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_existed_table.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_registered_table_negative.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_get_irreversible_block_forking.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_get_irreversible_block_non_forking.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_unregister_table.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_nonforking_detach_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_detach_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_non_forking_detach_test.sql )
