--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -164,6 +164,8 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_attach.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_attach_negative.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_detach.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_MASSIVE_SYNC_event.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_squash_MASSIVE_SYNC_event.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_series_of_MASSIVE_SYNC.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_non_forking_app.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_exists.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_existed_table.sql )
