issue #1: speeds up attach/detach a table
Slow ALTER TABLE DISBALE/ENABLE TRIGGERS changed to DROP and CREATE
triggers. Now ttime of hive.app_context_attach and hive.app_context_detach
take about 11ms

--- a/src/hive_fork_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/CMakeLists.txt
@@ -1,6 +1,7 @@
 ADD_PSQL_EXTENSION(
     NAME hive_fork_manager
     SOURCES context_rewind/data_schema.sql
+            context_rewind/triggers.sql
             context_rewind/event_triggers.sql
             context_rewind/register_table.sql
             context_rewind/detach_table.sql
