issue #7: hived cannot remove obsolete events
- resign from NULL field in hive.contexts.events_id, now when context is
created it got event id = 0, and in hive.events_queue always exists such
fake event
- during its creation a new context got irreversible_block from
hive.irreversible_data table

--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -167,6 +167,7 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_detach.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_MASSIVE_SYNC_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_squash_MASSIVE_SYNC_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_series_of_MASSIVE_SYNC.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_negative_MASSIVE_SYNC_event.sql)
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_non_forking_app.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_exists.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_existed_table.sql )
