issue #2: add hive.app_context_is_attached

--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -154,6 +154,8 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_non_forking_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_non_forking_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_is_attached.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_is_attached_negative.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_new_block_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_negative.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_new_block_event_2_contexts.sql )
