--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # run via: 
 # pip3 install --user -r requirements.txt
 
-aiocache==0.11.
+aiocache==0.11.1
 aiohttp==3.7.4.post0
 aiopg==1.2.1
 appdirs==1.4.3
@@ -13,7 +13,7 @@ backports.zoneinfo==0.2.1
 certifi==2021.5.30
 cffi==1.14.5
 chardet==3.0.4
-click==8.0.0a1    
+click==8.0.0a1
 click-shell==2.0
 configargparse==1.4.1
 cycler==0.10.0
