introducing state providers
state providers are sql scripts which can be 'imported' by the
application to provide tables which present some common states
of the blockchain for example table of all accounts.

There is the first state_provider: accounts

Documentation updated to describe state_providers

--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -198,6 +198,16 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_remove_detached_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork.sql )
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork_non_forking_app.sql )
 
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/import_state_provider_negative.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/import_state_provider.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/accounts_start_state_provider.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/accounts_update_state_provider.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/update_state_provider.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/update_state_provider_attached.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/update_state_provider_negative.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/context_remove_and_state_provider.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/import_state_provider_non_fork.sql )
+ADD_SQL_FUNCTIONAL_TESTS( state_providers/switch_state_provider_to_forkable.sql )
 
 ADD_AUTHORIZATION_FUNCTIONAL_TESTS( authorization/alice_access_to_bob_negative.sql )
 ADD_AUTHORIZATION_FUNCTIONAL_TESTS( authorization/alice_access_events_infrustructure.sql )
@@ -209,3 +219,5 @@ ADD_AUTHORIZATION_FUNCTIONAL_TESTS( authorization/hived_to_api_access.sql )
 
 ADD_EXAMPLES_FUNCTIONAL_TESTS( examples/forking_application.py )
 ADD_EXAMPLES_FUNCTIONAL_TESTS( examples/non_forking_application.py )
+ADD_EXAMPLES_FUNCTIONAL_TESTS( examples/accounts_provider_application.py )
+ADD_EXAMPLES_FUNCTIONAL_TESTS( examples/accounts_provider_non_fork_application.py )
