--- a/src/hive_fork_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/CMakeLists.txt
@@ -15,6 +15,8 @@ ADD_PSQL_EXTENSION(
             irreversible_blocks.sql
             reversible_blocks.sql
             blocks_views_for_contexts.sql
+            state_provider.sql
+            state_providers/accounts.sql
             hived_api_impl.sql
             app_api_impl.sql
             hived_api.sql
