Static AH library is compiled correctly

--- a/src/hive_fork_manager/ah_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/ah_manager/CMakeLists.txt
@@ -1,26 +1,9 @@
-PROJECT(ah_manager)
-
 ADD_SUBDIRECTORY( protocol )
 
-ADD_LIBRARY(  ah_manager
-              utilities.cpp
-              )
+SET( target_name ah_manager )
 
-target_link_libraries( ah_manager PUBLIC hive_protocol )
+ADD_STATIC_LIB( ${target_name} )
 
+TARGET_LINK_LIBRARIES( ${target_name} PUBLIC hive_protocol )
 
-if( CLANG_TIDY_EXE )
-   set_target_properties(
-    ah_manager PROPERTIES
-      CXX_CLANG_TIDY "${DO_CLANG_TIDY}"
-   )
-endif( CLANG_TIDY_EXE )
-
-install( TARGETS
-  ah_manager
-
-  RUNTIME DESTINATION bin
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib
-)
-
+INSTALL( TARGETS ${target_name} DESTINATION ${POSTGRES_LIBDIR}/plugins OPTIONAL )
