--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -143,6 +143,7 @@ ADD_SQL_FUNCTIONAL_TESTS( hived_api/enable_indexes_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/remove_obsolete_end_massive_sync_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/remove_obsolete_end_massive_sync_with_app_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_not_copy_reversible_data_from_old_fork_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_not_copy_reversible_data_from_top_fork_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_remove_test.sql )
