--- a/src/hive_fork_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/CMakeLists.txt
@@ -23,4 +23,5 @@ ADD_PSQL_EXTENSION(
             hived_api.sql
             app_api.sql
             authorization.sql
+            get_impacted_accounts.sql
 )
