--- a/Dockerfile.postgres12
+++ b/Dockerfile.postgres12
@@ -15,6 +15,8 @@ RUN \
             postgresql-server-dev-12 \
             git \
             python3-pip \
+            libssl-dev \
+            libreadline-dev \
     && \
         apt-get clean
 
