New names: directory `ah_mananger` -> `shared_lib`, shared library `ah_manager` -> `hfm`

--- a/src/hive_fork_manager/shared_lib/CMakeLists.txt
+++ b/src/hive_fork_manager/shared_lib/CMakeLists.txt
@@ -14,7 +14,7 @@ SET( DONT_INSTALL_LIBRARY OFF )
 
 ADD_SUBDIRECTORY( protocol )
 
-SET( target_name ah_manager )
+SET( target_name hfm )
 
 PREPARE_LIB( ${target_name} )
 
