Building of shared library works

--- a/src/hive_fork_manager/shared_lib/CMakeLists.txt
+++ b/src/hive_fork_manager/shared_lib/CMakeLists.txt
@@ -1,8 +1,6 @@
 #By default headers from `protocol`/`schema` are installed, therefore an installation should be blocked
 SET( CUSTOM_INSTALLATION ON )
 
-SET( BUILD_SHARED_LIBS ON FORCE )
-
 SET(_CUSTOM_RUNTIME_PATH ${POSTGRES_LIBDIR} CACHE PATH "Custom runtime path")
 
 set(CMAKE_INSTALL_RPATH ${_CUSTOM_RUNTIME_PATH})
@@ -12,9 +10,9 @@ SET(CMAKE_INSTALL_PREFIX ${_CUSTOM_RUNTIME_PATH} CACHE PATH "Default prefix" FOR
 SET(DEFAULT_LIBRARY_INSTALL_DIR ${_CUSTOM_RUNTIME_PATH} CACHE PATH "Default library" FORCE)
 SET( DONT_INSTALL_LIBRARY OFF )
 
-ADD_SUBDIRECTORY( protocol )
-
 SET( target_name hfm )
+
+include_directories( "${CMAKE_SOURCE_DIR}/src/protocol/include" )
 
 PREPARE_LIB( ${target_name} )
 
