--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ PROJECT( psql_tools )
 
 SET( CMAKE_POSITION_INDEPENDENT_CODE ON )
 SET( CMAKE_SKIP_INSTALL_ALL_DEPENDENCY TRUE )
+SET( BUILD_SHARED_LIBS ON )
 
 include( ExternalProject )
 
