issue #25: views with empty blocks on top fork work incorrectly

--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -194,6 +194,7 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_non_forking_detach_t
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_detach_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_after_attach.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_remove_detached_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/empty_blocks_and_views.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork.sql )
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork_non_forking_app.sql )
