Unique name of shared library - part 2

--- a/src/hive_fork_manager/shared_lib/CMakeLists.txt
+++ b/src/hive_fork_manager/shared_lib/CMakeLists.txt
@@ -1,13 +1,8 @@
 #By default headers from `protocol`/`schema` are installed, therefore an installation should be blocked
 SET( CUSTOM_INSTALLATION ON )
 
-SET(_CUSTOM_RUNTIME_PATH ${POSTGRES_LIBDIR} CACHE PATH "Custom runtime path")
-
-set(CMAKE_INSTALL_RPATH ${_CUSTOM_RUNTIME_PATH})
-SET(CMAKE_INSTALL_PREFIX ${_CUSTOM_RUNTIME_PATH} CACHE PATH "Default prefix" FORCE)
-
 #fc settings
-SET(DEFAULT_LIBRARY_INSTALL_DIR ${_CUSTOM_RUNTIME_PATH} CACHE PATH "Default library" FORCE)
+SET(DEFAULT_LIBRARY_INSTALL_DIR ${POSTGRES_LIBDIR} CACHE PATH "Default library" FORCE)
 SET( DONT_INSTALL_LIBRARY OFF )
 
 SET( target_name hfm-${GIT_VER_DEC} )
