Upper case in messages applied

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ GENERATE_GIT_VERSION_FILE()
 GET_RUNTIME_POSTGRES_VARIABLES()
 
 set(CMAKE_INSTALL_RPATH ${POSTGRES_LIBDIR})
-SET(CMAKE_INSTALL_PREFIX ${POSTGRES_LIBDIR} CACHE PATH "Default prefix" FORCE)
+SET(CMAKE_INSTALL_PREFIX ${POSTGRES_LIBDIR} CACHE PATH "DEFAULT PREFIX" FORCE)
 
 ENABLE_TESTING()
 
