--- a/src/hive_fork_manager/shared_lib/CMakeLists.txt
+++ b/src/hive_fork_manager/shared_lib/CMakeLists.txt
@@ -2,7 +2,7 @@
 SET( CUSTOM_INSTALLATION ON )
 
 #fc settings
-SET(DEFAULT_LIBRARY_INSTALL_DIR ${POSTGRES_LIBDIR} CACHE PATH "Default library" FORCE)
+SET(DEFAULT_LIBRARY_INSTALL_DIR ${POSTGRES_LIBDIR} CACHE PATH "DEFAULT LIBRARY" FORCE)
 SET( DONT_INSTALL_LIBRARY OFF )
 
 SET( target_name hfm-${GIT_VER_DEC} )
