cmake fixes: temporary remove static build of libs, support for PQ

--- a/src/hive_fork_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/CMakeLists.txt
@@ -26,4 +26,6 @@ ADD_PSQL_EXTENSION(
             get_impacted_accounts.sql
 )
 
+ADD_SUBDIRECTORY( shared_lib )
+
 ADD_DEPENDENCIES( extension.${EXTENSION_NAME} hfm-${GIT_VER_DEC} )
