include hive in global cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
 
-PROJECT( psql_tools )
+PROJECT( haf )
+
+ADD_SUBDIRECTORY( hive )
 
 IF ( NOT DEFINED POSTGRES_INSTALLATION_DIR )
     SET( POSTGRES_INSTALLATION_DIR "/usr/lib/postgresql/12/bin" )
@@ -23,6 +25,8 @@ INCLUDE( targets )
 INCLUDE( tests )
 
 SETUP_OUTPUT_DIRECTORIES()
+
+FILE( CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/src/sql_serializer ${CMAKE_CURRENT_SOURCE_DIR}/hive/libraries/plugins/sql_serializer SYMBOLIC )
 
 GENERATE_GIT_VERSION_FILE()
 GET_RUNTIME_POSTGRES_VARIABLES()
