--- a/src/sql_serializer/CMakeLists.txt
+++ b/src/sql_serializer/CMakeLists.txt
@@ -35,9 +35,9 @@ target_link_libraries( sql_serializer_plugin chain_plugin hive_chain hive_protoc
 
 target_include_directories( sql_serializer_plugin
                             PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
-                            PRIVATE "${PostgreSQL_INCLUDE_DIRS}" ${HAF_DIRECTORY}/src/transaction_controllers
+                            PRIVATE "${PostgreSQL_INCLUDE_DIRS}" "${HAF_DIRECTORY}/common_includes/include"
                           )
-MESSAGE( "!!!!!!!!!!!!!!!!!!!!!! ${HAF_DIRECTORY}/src/transaction_controllers" )
+MESSAGE( "!!!!!!!!!!!!!!!!!!!!!! ${HAF_DIRECTORY}/common_includes/include" )
 if( CLANG_TIDY_EXE )
    set_target_properties(
 		sql_serializer_plugin PROPERTIES
