only hived target from hive poroject is build with the 'all' target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
 
 PROJECT( haf )
-SET( HAF_DIRECTORY ${PROJECT_SOURCE_DIR} )
+SET( HAF_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
 
-ADD_SUBDIRECTORY( hive )
+ADD_SUBDIRECTORY( hive EXCLUDE_FROM_ALL )
+SET_TARGET_PROPERTIES( hived PROPERTIES EXCLUDE_FROM_ALL 0 )
 
 IF ( NOT DEFINED POSTGRES_INSTALLATION_DIR )
     SET( POSTGRES_INSTALLATION_DIR "/usr/lib/postgresql/12/bin" )
