--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 variables:
   GIT_DEPTH: 1
   GIT_SUBMODULE_STRATEGY: recursive
-  BUILDER_IMAGE_TAG: "@sha256:c9c70e6f8f96defc9f04dd2011c40c752b1e8c2ae9ac2e153cec2199c11636af"
+  BUILDER_IMAGE_TAG: "@sha256:490fc2d6ebab2ae3717a46e8ef3d65aed44af8855918cbcbe741a2965d7d70d5"
 
 hive_fork_manager:
   stage: build_and_test
@@ -13,21 +13,21 @@ hive_fork_manager:
     - /etc/init.d/postgresql start
     - mkdir -p "$CI_JOB_NAME"/build
     - cd "$CI_JOB_NAME"/build
-    - cmake ../..
-    - make extension.hive_fork_manager
+    - cmake -DCMAKE_BUILD_TYPE=Release ../..
+    - make extension.hive_fork_manager -j10
     - make install
     - ctest --output-on-failure  -R test.functional.hive_fork_manager.*
   tags:
     - public-runner-docker
 
-c++_unit_tests:
-  stage: build_and_test
-  image: "$CI_REGISTRY_IMAGE/builder$BUILDER_IMAGE_TAG"
-  script:
-    - mkdir -p "$CI_JOB_NAME"/build
-    - cd "$CI_JOB_NAME"/build
-    - cmake ../..
-    - make
-    - ctest --output-on-failure -R test.unit.*
-  tags:
-    - public-runner-docker
+# c++_unit_tests:
+#   stage: build_and_test
+#   image: "$CI_REGISTRY_IMAGE/builder$BUILDER_IMAGE_TAG"
+#   script:
+#     - mkdir -p "$CI_JOB_NAME"/build
+#     - cd "$CI_JOB_NAME"/build
+#     - cmake -DCMAKE_BUILD_TYPE=Release ../..
+#     - make
+#     - ctest --output-on-failure -R test.unit.*
+#   tags:
+#     - public-runner-docker
