--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 3.14 )
 
 PROJECT( haf )
+SET( Boost_NO_BOOST_CMAKE ON CACHE STRING "ON or OFF" FORCE )
 SET( HAF_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
 
 ADD_SUBDIRECTORY( hive EXCLUDE_FROM_ALL )
