--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 variables:
   GIT_DEPTH: 1
   GIT_SUBMODULE_STRATEGY: recursive
-  BUILDER_IMAGE_TAG: "@sha256:370887eb9d2b95162513987060bec7dd10f4d2fb80adbec70fb83bd601786fa5"
+  BUILDER_IMAGE_TAG: "@sha256:c299b6f2d0928adbf02bd40158cd8acd0b32187686b97e88303182ba82d12647"
 
 hive_fork_manager:
   stage: build_and_test
@@ -13,7 +13,7 @@ hive_fork_manager:
     - /etc/init.d/postgresql start
     - mkdir -p "$CI_JOB_NAME"/build
     - cd "$CI_JOB_NAME"/build
-    - cmake -DCMAKE_BUILD_TYPE=Release ../..
+    - cmake -DCMAKE_BUILD_TYPE=Release -DHIVE_LINT=ON ../..
     - make extension.hive_fork_manager -j10
     - make install
     - ctest --output-on-failure  -R test.functional.hive_fork_manager.*
@@ -27,7 +27,7 @@ hived:
     - /etc/init.d/postgresql start
     - mkdir -p "$CI_JOB_NAME"/build
     - cd "$CI_JOB_NAME"/build
-    - cmake -DCMAKE_BUILD_TYPE=Release -DCLEAR_VOTES=ON -DENABLE_MIRA=OFF -DBUILD_HIVE_TESTNET=OFF -DHIVE_LINT=OFF ../..
+    - cmake -DCMAKE_BUILD_TYPE=Release -DCLEAR_VOTES=ON -DENABLE_MIRA=OFF -DBUILD_HIVE_TESTNET=OFF -DHIVE_LINT=ON ../..
     - make hived -j10
     # check if sql_serializer compiles with hived
     - test -f hive/libraries/plugins/sql_serializer/libsql_serializer_plugin.a
