clang-tidy enabled for HAF targets -not only for hive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ INCLUDE( ExternalProject )
 
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
 
+INCLUDE( clangtidy )
 INCLUDE( compiler )
 INCLUDE( git )
 INCLUDE( libraries )
