psql_tools#19: hive.connect method
- add hive.connect method
- add hive.hived_connections table and access to it authorization
- add functional tests
- update documentation

--- a/src/hive_fork_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/CMakeLists.txt
@@ -18,6 +18,7 @@ ADD_PSQL_EXTENSION(
             blocks_views_for_contexts.sql
             state_provider.sql
             state_providers/accounts.sql
+            hived_connections.sql
             hived_api_impl.sql
             app_api_impl.sql
             hived_api.sql
