add accounts table to HFM and sql_serialzer

--- a/tests/integration/functional/hive_fork_manager/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork_manager/CMakeLists.txt
@@ -146,6 +146,8 @@ ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_not_copy_reversible_data_fr
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_not_copy_reversible_data_from_top_fork_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/removing_inconsistent_irreversibele_data.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/connect_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( hived_api/copy_accounts_to_irreversible.sql )
+ADD_SQL_FUNCTIONAL_TESTS( hived_api/copy_account_operations_to_irreversible.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_remove_test.sql )
@@ -197,6 +199,14 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_detach_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_after_attach.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_remove_detached_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/empty_blocks_and_views.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_accounts_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_accounts_view_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_accounts_view_nonforking_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_accounts_view_nonforking_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_account_operations_view_detach_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_account_operations_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_account_operations_view_nonforking_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_account_operations_view_nonforking_detach_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork.sql )
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork_non_forking_app.sql )
