--- a/tests/performance/proj.jmx.in
+++ b/tests/performance/proj.jmx.in
@@ -84,7 +84,7 @@
 	  &quot;operation_begin&quot;: 0,&#xd;
 	  &quot;limit&quot;: 1000&#xd;
 	},&#xd;
-  &quot;id&quot;: 1&#xd;
+  &quot;id&quot;: &quot;${__threadNum}/${__counter(TRUE)}&quot;&#xd;
 }</stringProp>
                   <stringProp name="Argument.metadata">=</stringProp>
                 </elementProp>
@@ -196,7 +196,7 @@
     &quot;id&quot;: &quot;${hash}&quot;,&#xd;
     &quot;include_reversible&quot;: true&#xd;
   },&#xd;
-  &quot;id&quot;: 1&#xd;
+  &quot;id&quot;: &quot;${__threadNum}/${__counter(TRUE)}&quot;&#xd;
 }</stringProp>
                   <stringProp name="Argument.metadata">=</stringProp>
                 </elementProp>
@@ -311,7 +311,7 @@
     &quot;operation_filter_high&quot;: 0,&#xd;
     &quot;include_reversible&quot;: true&#xd;
   },&#xd;
-  &quot;id&quot;: 1&#xd;
+  &quot;id&quot;: &quot;${__threadNum}/${__counter(TRUE)}&quot;&#xd;
 }</stringProp>
                   <stringProp name="Argument.metadata">=</stringProp>
                 </elementProp>
@@ -423,7 +423,7 @@
     &quot;only_virtual&quot;: true,&#xd;
     &quot;include_reversible&quot;: true&#xd;
   },&#xd;
-  &quot;id&quot;: 1&#xd;
+  &quot;id&quot;: &quot;${__threadNum}/${__counter(TRUE)}&quot;&#xd;
 }</stringProp>
                   <stringProp name="Argument.metadata">=</stringProp>
                 </elementProp>
@@ -469,7 +469,7 @@
         <collectionProp name="Arguments.arguments">
           <elementProp name="THREAD_COUNT" elementType="Argument">
             <stringProp name="Argument.name">THREAD_COUNT</stringProp>
-            <stringProp name="Argument.value">10</stringProp>
+            <stringProp name="Argument.value">ENTER THREAD COUNT HERE</stringProp>
             <stringProp name="Argument.metadata">=</stringProp>
           </elementProp>
           <elementProp name="PORT" elementType="Argument">
