issue #14: postgres extension versioonen with hex git sha

--- a/src/hive_fork_manager/shared_lib/CMakeLists.txt
+++ b/src/hive_fork_manager/shared_lib/CMakeLists.txt
@@ -1,7 +1,7 @@
 #By default headers from `protocol`/`schema` are installed, therefore an installation should be blocked
 SET( CUSTOM_INSTALLATION ON )
 
-SET( target_name hfm-${GIT_VER_DEC} )
+SET( target_name hfm-${GIT_REVISION} )
 
 ADD_RUNTIME_LOADED_LIB( ${target_name} )
 
