--- a/src/hive_fork_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/CMakeLists.txt
@@ -30,4 +30,4 @@ ADD_PSQL_EXTENSION(
 
 ADD_SUBDIRECTORY( shared_lib )
 
-ADD_DEPENDENCIES( extension.${EXTENSION_NAME} hfm-${GIT_VER_DEC} )
+ADD_DEPENDENCIES( extension.${EXTENSION_NAME} hfm-${GIT_REVISION} )
