fast live sync dumper

--- a/src/sql_serializer/CMakeLists.txt
+++ b/src/sql_serializer/CMakeLists.txt
@@ -15,6 +15,7 @@ ADD_LIBRARY(
     livesync_data_dumper.cpp
     queries_commit_data_processor.cpp
     string_data_processor.cpp
+    fast_livesync_data_dumper.cpp
     ${HEADERS}
 )
 
